Navbar changes: fixed and toggle navbar have the same settings. Custom colours. Moved cover image down to make white space for the fixed navbar

--- a/_sass/startbootstrap-clean-blog/_masthead.scss
+++ b/_sass/startbootstrap-clean-blog/_masthead.scss
@@ -1,6 +1,7 @@
 // Styling for the masthead
 header.masthead {
   // TIP: Background images are set within the HTML using inline CSS!
+  margin-top: 67px; // prevent overlap with navbar
   margin-bottom: 50px;
   background: no-repeat center center;
   background-color: $gray-600;
@@ -14,7 +15,7 @@ header.masthead {
     height: 100%;
     width: 100%;
     background-color: $gray-900;
-    opacity: 0.5;
+    opacity: 0.3;
   }
   .page-heading,
   .post-heading,
