--- a/_sass/startbootstrap-clean-blog/_navbar.scss
+++ b/_sass/startbootstrap-clean-blog/_navbar.scss
@@ -12,16 +12,16 @@
     font-size: 12px;
     font-weight: 800;
     padding: 13px;
-    text-transform: uppercase;
+    text-transform: capitelize;
     color: $gray-800;
   }
   .navbar-nav {
     > li.nav-item {
       > a {
-        font-size: 12px;
+        font-size: 16px;
         font-weight: 800;
         letter-spacing: 1px;
-        text-transform: uppercase;
+        text-transform: capitelize;
       }
     }
   }
@@ -30,20 +30,20 @@
     background: transparent;
     .navbar-brand {
       padding: 10px 20px;
-      color: $white;
+      color: $nav-font-colour;
       &:focus,
       &:hover {
-        color: fade-out($white, .2);
+        color: $primary ;// fade-out($black, .2);
       }
     }
     .navbar-nav {
       > li.nav-item {
         > a {
           padding: 10px 20px;
-          color: $white;
+          color: $nav-font-colour;
           &:focus,
           &:hover {
-            color: fade-out($white, .2);
+            color: $primary ;//fade-out($black, .2);
           }
         }
       }
@@ -70,7 +70,7 @@
       border-bottom: 1px solid darken($white, .05);
       background-color: fade-out($white, .1);
       .navbar-brand {
-        color: $gray-900;
+        color: $nav-font-colour;
         &:focus,
         &:hover {
           color: $primary;
@@ -79,7 +79,7 @@
       .navbar-nav {
         > li.nav-item {
           > a {
-            color: $gray-900;
+            color: $nav-font-colour;
             &:focus,
             &:hover {
               color: $primary;
